--- a/.github/workflows/silver.yml
+++ b/.github/workflows/silver.yml
@@ -8,26 +8,31 @@ on:
 jobs:
   run:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          pip install -r requirements.txt
 
-      - name: Run tracker
+      - name: Run silver tracker
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: python silver_tracker.py
-
-      - name: Save CSV
         run: |
-          git config user.name "bot"
-          git config user.email "bot@github.com"
-          git add silver_history.csv
+          python silver_tracker.py
+
+      - name: Commit CSV
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add silver_history.csv || true
           git commit -m "Update silver history" || true
-          git push
+          git push || true
