--- a/.github/workflows/silver.yml
+++ b/.github/workflows/silver.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
       - name: Set up Python
@@ -29,12 +29,10 @@ jobs:
         run: |
           python silver_tracker.py
 
-      - name: Commit CSV safely
+      - name: Commit CSV
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-
-          git pull --rebase origin main || true
           git add silver_history.csv || true
           git commit -m "Update silver history" || true
-          git push origin main || true
+          git push || true
