--- a/.github/workflows/silver.yml
+++ b/.github/workflows/silver.yml
@@ -33,6 +33,6 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add silver_history.csv || true
+          git add tatsilver_log.csv || true
           git commit -m "Update silver history" || true
           git push || true
